Filter item spacing bug fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -200,6 +200,7 @@ a:hover {
 }
 .filter-section p.counter {
   margin-left: 8px;
+  margin-right: 12px;
   font-weight: 300;
   display: inline;
   color: #8a8a8a;
