--- a/assets/source/sass/_controls.custom.scss
+++ b/assets/source/sass/_controls.custom.scss
@@ -12,6 +12,7 @@
     }
     p.counter{
         margin-left: $spacing-smaller;
+        margin-right: $spacing-small;
         font-weight: $font-weight-light;
         display: inline;
         color: $color-dark-grey;
